# ai-email-intelligence-environment

./: Dockerfile  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  upload_hf.py
ai_email_intelligence_environment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
email_env/: __init__.py  env.py  inference.py  main.py  models.py
email_env/graders/: __init__.py  classification_grader.py  reply_grader.py  summarization_grader.py
email_env/tasks/: __init__.py  classification.py  reply.py  summarization.py
email_env/tests/: test_env.py
server/: app.py
