[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-email-intelligence-environment"
version = "1.0.0"
description = "OpenEnv-compliant AI environment for email classification, summarization and reply generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "gradio>=6.11.0",
    "openenv==0.1.13"   # ✅ IMPORTANT
]

# ✅ REQUIRED FOR SCALER
[project.scripts]
server = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
